Remove Java 15 support
Java 15 has been EOL for a while now. No need to continue supporting
it.

Closes #78